# avstack-rosbridge

./: .gitignore  .gitmodules  Makefile  pyproject.toml
.github/workflows/: tests.yml
avstack_bridge/: package.xml  setup.cfg  setup.py
avstack_bridge/avstack_bridge/: __init__.py  base.py  calibration.py  detections.py  geometry.py  metrics.py  objects.py  sensors.py  tracks.py  transform.py
avstack_bridge/test/: test_base_bridge.py  test_calib_bridge.py  test_sensor_bridge.py  utilities.py
avstack_bridge/tests/: test_base_bridge.py  test_calib_bridge.py  test_geometry_bridge.py  test_objects_bridge.py  test_sensor_bridge.py  test_transforms.py  tf_utilities.py  utilities.py
avstack_bringup/: CMakeLists.txt  package.xml
avstack_metrics/: package.xml  setup.cfg  setup.py
avstack_metrics/avstack_metrics/: evaluator.py  visualizer.py
avstack_metrics/launch/: evaluator.launch.py  test_evaluator.launch.py
avstack_msgs/: CMakeLists.txt  package.xml
avstack_msgs/msg/: AgentArray.msg  AssignmentMetrics.msg  BoxTrack.msg  BoxTrack2D.msg  BoxTrack2DArray.msg  BoxTrack3D.msg  BoxTrack3DArray.msg  BoxTrack3DArrayWithSender.msg  BoxTrack3DArrayWithSenderArray.msg  BoxTrackArray.msg  BoxTrackArrayWithSender.msg  BoxTrackArrayWithSenderArray.msg  BoxTrackStamped.msg  IdList.msg  ObjectState.msg  ObjectStateArray.msg  ObjectStateArrayWithSender.msg  ObjectStateArrayWithSenderArray.msg  TrackingMetrics.msg  XyzTrack.msg  XyzTrackArray.msg
avstack_msgs_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
avstack_msgs_rviz_plugins/conf/: conf.rviz
avstack_msgs_rviz_plugins/include/avstack_msgs_rviz_plugins/: box_track.hpp  box_track_3d.hpp  box_track_3d_array.hpp  box_track_3d_common.hpp  box_track_array.hpp  box_track_common.hpp  object_state.hpp  object_state_array.hpp  object_state_common.hpp  visibility_control.hpp
avstack_msgs_rviz_plugins/launch/: test_all.launch.py
avstack_msgs_rviz_plugins/samples/: BoxTrack.py  BoxTrack3D.py  BoxTrack3DArray.py  BoxTrackArray.py  ObjectState.py  ObjectStateArray.py
avstack_msgs_rviz_plugins/src/: box_track.cpp  box_track_3d.cpp  box_track_3d_array.cpp  box_track_array.cpp  object_state.cpp  object_state_array.cpp
avstack_perception/: package.xml  setup.cfg  setup.py
avstack_perception/avstack_perception/camera/: mmdetection2d.py
avstack_perception/avstack_perception/fov/: lidar_concave_hull.py
avstack_perception/avstack_perception/lidar/: laserscan_box_detection.py  mmdetection3d.py
avstack_perception/launch/: mmdetection3d.launch.py
avstack_rosbag/: package.xml  setup.cfg  setup.py
avstack_rosbag/avstack_rosbag/: __init__.py  config.py  dataset_algorithms.py  dataset_loader.py  dataset_postprocessor.py  dataset_rosconverter.py  dataset_roswriter.py  hooks.py  rosbag_api.py  utils.py
avstack_rosbag/avstack_rosbag/carla/: carla_dataset_loader.py  carla_dataset_recorder.py  carla_dataset_replayer.py  carla_dataset_writer.py  carla_dataset_writer_with_adversary.py  hooks.py
avstack_rosbag/config/: carla_dataset_replayer.yaml  carla_dataset_writer.yaml  carla_dataset_writer_no_percep.yaml  cte_attack_1.yaml  cte_attack_2.yaml  cte_attack_3.yaml  cte_baseline.yaml
avstack_rosbag/launch/: carla_dataset_recorder.launch.py  carla_dataset_replayer.launch.py  carla_dataset_writer.launch.py  carla_dataset_writer_with_adversary.launch.py
avstack_rosbag/scripts/: play_rosbag.sh  write_carla_dataset.py  write_cte_case_carla_datasets.py  write_cte_mc_carla_datasets.py
avstack_rosbag/scripts/dataset_configs/: baseline_algorithms.py  baseline_no_algorithms.py  baseline_trust.py
avstack_rosbag/scripts/dataset_configs/cte_cases/: case_1.py
avstack_rosbag/test/: test_dataset_algorithms.py  test_dataset_loader.py  test_dataset_rosconverter.py  test_dataset_roswriter.py
avstack_tracking/: package.xml  setup.cfg  setup.py
avstack_tracking/avstack_tracking/: box2d_tracker.py  box3d_tracker.py  boxtracker3d.py  multi_platform_boxtracker3d.py  position_tracker.py
avstack_tracking/launch/: boxtracker3d.launch.py
avstack_tracking/samples/: TrackAndTruthSample.py
