[project]
name = "avstack-rosbridge"
version = "0.1.0-alpha.1"
description = "AVstack ROS bridge"
authors = [{ name = "Spencer Hallyburton", email = "spencer@shally.dev" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "computer vision",
    "perception",
    "tracking",
    "replay",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "avstack_bridge",
    "opencv-python>4.7, <4.9.0.80",
    "ros2_numpy==0.0.2",
]

[project.optional-dependencies]
avstack = [
    "avstack-core",
    "avstack-api",
]

[project.urls]
Repository = "https://github.com/avstack-lab/avstack-rosbridge.git"

[dependency-groups]
test = [
    "snakeviz>=2.1.1,<3",
    "pytest>=7,<8",
    "pytest-cov>=4,<5",
    "bandit~=1.7",
    "black[jupyter]~=22.12.0",
    "mypy>=0,<1",
    "isort~=5.11",
    "flake8~=5.0",
    "autoflake>=1,<2",
]

[tool.uv]
default-groups = ["test"]
package = false

[tool.uv.sources]
avstack_bridge = { path = "./avstack_bridge/", editable = true }
avstack-core = { path = "./submodules/avstack-core", editable = true }
avstack-api = { path = "./submodules/avstack-api", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]
